--- a/MyProject/Views/Shared/_Layout.cshtml
+++ b/MyProject/Views/Shared/_Layout.cshtml
@@ -69,5 +69,10 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+
+    <div id="app">
+        Hello, {{name}}
+    </div>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
