--- a/MyProject/Views/Shared/_Layout.cshtml
+++ b/MyProject/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="VueLab">VueLab</a></li>
                 </ul>
             </div>
         </div>
@@ -69,10 +70,5 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
-
-    <div id="app">
-        Hello, {{name}}
-    </div>
-    <script src="./dist/main.js"></script>
 </body>
 </html>
